<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_orange" >

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="50dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/editTextContainer"
        style="@style/EditTextContainer"
        android:layout_below="@id/appName" >

        <EditText
            android:id="@+id/usernameField"
            style="@style/editTextBasicStyles"
            android:layout_below="@id/appName"
            android:hint="@string/username_field_hint" />

        <EditText
            android:id="@+id/firstNameField"
            style="@style/editTextBasicStyles"
            android:layout_below="@id/usernameField"
            android:layout_toLeftOf="@+id/editTextSeperator"
            android:hint="@string/first_name_edit_text_label"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/lastNameField"
            style="@style/editTextBasicStyles"
            android:hint="@string/last_name_edit_text_label"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/emailField"
            style="@style/editTextBasicStyles"
            android:hint="@string/email_edit_text_label"
            android:inputType="textEmailAddress"
            android:maxLength="30" />

        <EditText
            android:id="@+id/passwordField"
            style="@style/editTextBasicStyles"
            android:hint="@string/password_field_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:layout_marginBottom="@dimen/relative_layout_hori_vert_paddings" />
    </LinearLayout>

    <Button
        android:id="@+id/signupButton"
        style="@style/ButtonBasicStyles"
        android:layout_below="@id/editTextContainer"
        android:layout_marginLeft="@dimen/relative_layout_hori_vert_paddings"
        android:layout_toLeftOf="@+id/buttonSeperator"
        android:text="@string/sign_up_button_label" />

    <View
        android:id="@+id/buttonSeperator"
        android:layout_width="1dp"
        android:layout_height="40dp"
        android:layout_below="@id/editTextContainer"
        android:layout_centerHorizontal="true"
        android:background="@color/ran_blue"
        android:visibility="visible" 
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/cancelButton"
        style="@style/ButtonBasicStyles"
        android:layout_below="@id/editTextContainer"
        android:layout_marginRight="@dimen/relative_layout_hori_vert_paddings"
        android:layout_toRightOf="@id/buttonSeperator"
        android:text="@string/cancel_button_label" />

</RelativeLayout>