<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_orange" >

    <ImageView
        android:id="@+id/backgroundHolder"
        style="@style/backgroundImageViewStyle" />

    <ImageView
        android:id="@+id/profilePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/relative_layout_hori_vert_paddings"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/editTextContainer"
        style="@style/EditTextContainer"
        android:layout_below="@id/profilePhoto"
        android:layout_marginTop="@dimen/relative_layout_hori_vert_paddings" >

        <EditText
            android:id="@+id/usernameField"
            style="@style/editTextBasicStyles"
            android:hint="@string/username_field_hint" />

        <EditText
            android:id="@+id/firstNameField"
            style="@style/editTextBasicStyles"
            android:hint="@string/first_name_edit_text_label"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/lastNameField"
            style="@style/editTextBasicStyles"
            android:hint="@string/last_name_edit_text_label"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/emailField"
            style="@style/editTextBasicStyles"
            android:hint="@string/email_edit_text_label"
            android:inputType="textEmailAddress"
            android:maxLength="30" />

        <EditText
            android:id="@+id/passwordField"
            style="@style/editTextBasicStyles"
            android:layout_marginBottom="@dimen/relative_layout_hori_vert_paddings"
            android:hint="@string/password_field_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        style="@style/ButtonBasicStyles"
        android:layout_below="@id/editTextContainer"
        android:layout_marginLeft="@dimen/relative_layout_hori_vert_paddings"
        android:layout_toLeftOf="@+id/buttonSeperator"
        android:text="@string/save_button_label" />

    <View
        android:id="@+id/buttonSeperator"
        android:layout_width="0.5dp"
        android:layout_height="40dp"
        android:layout_below="@id/editTextContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@color/ran_blue"
        android:visibility="visible" />

    <Button
        android:id="@+id/discardButton"
        style="@style/ButtonBasicStyles"
        android:layout_below="@id/editTextContainer"
        android:layout_marginRight="@dimen/relative_layout_hori_vert_paddings"
        android:layout_toRightOf="@id/buttonSeperator"
        android:text="@string/discard_button_label" />

</RelativeLayout>